chore: fix spacing on product details pills

--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -725,6 +725,10 @@ video {
   margin-top: 5px;
 }
 
+.tw-mt-8 {
+  margin-top: 2rem;
+}
+
 .tw-block {
   display: block;
 }
